First Commit for AutoPagerize

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "template",
-  "description": "wedata@GitHub/template",
+  "name": "AutoPagerize",
+  "description": "wedata@GitHub/AutoPagerize",
   "version": "0.1.0",
-  "homepage": "https://github.com/wedata/template",
+  "homepage": "https://github.com/wedata/AutoPagerize",
   "repository": {
     "type": "git",
-    "url": "https://github.com/wedata/template.git"
+    "url": "https://github.com/wedata/AutoPagerize.git"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
